# image-segmentation-blog-scripts

./: .gitignore  README.md  deploy.py  model.py  predict.py  pyproject.toml  train.py
